--- a/src/app/pages/accesorio/detalle-accesorio/detalle-accesorio.component.html
+++ b/src/app/pages/accesorio/detalle-accesorio/detalle-accesorio.component.html
@@ -140,7 +140,7 @@
       Cuerpo ligero y compacto con un cordón trenzado para un fácil transporte donde sea que vayas. 101 g de peso, 50 x 56 mm de tamaño. Con
       clasificación IPX4 para la resistencia al agua y al sudor
     </h3>
-    <div class="product-detail-features justify-content-center align-items-center">
+    <!--<div class="product-detail-features justify-content-center align-items-center">
       <div class="product-detail-features_list">
         <ul>
           <li>
@@ -177,7 +177,16 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div>-->
   </section>
   <!-- End Product Detail -->
+
+  <!-- Footer para producto -->
+  <div class="footer-product">
+    <div class="footer-product-content">
+      <span> Consideraciones </span>
+      <i class="fas fa-chevron-right"> </i>
+    </div>
+  </div>
+  <!-- Fin Footer para producto -->
 </main>
