--- a/src/app/pages/hogar/detalle-hogar/detalle-hogar.component.html
+++ b/src/app/pages/hogar/detalle-hogar/detalle-hogar.component.html
@@ -196,4 +196,12 @@
     </div>
   </section>
   <!-- End Product Detail -->
+  <!-- Footer para producto -->
+  <div class="footer-product">
+    <div class="footer-product-content">
+      <span> Consideraciones </span>
+      <i class="fas fa-chevron-right"> </i>
+    </div>
+  </div>
+  <!-- Fin Footer para producto -->
 </main>
