--- a/src/app/pages/accesorio/detalle-accesorio/detalle-accesorio.component.scss
+++ b/src/app/pages/accesorio/detalle-accesorio/detalle-accesorio.component.scss
@@ -514,7 +514,7 @@
       }
 
       .legal {
-        font-size: 11px;
+        font-size: 12px;
         color: #222222;
         font-weight: 300;
       }
@@ -724,3 +724,38 @@
 }
 
 /* ---------- End Product Detail ---------- */
+/* ---------- Footer para producto ---------- */
+
+.footer-product {
+  background: #ffffff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+  height: auto;
+  margin: auto;
+  user-select: none;
+  width: 100%;
+
+  .footer-product-content {
+    height: 60px;
+    line-height: 60px;
+
+    span {
+      font-size: 16px;
+      font-weight: 400;
+      margin-left: 22px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 77%;
+    }
+
+    i {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+/* ---------- Fin Footer para producto ---------- */
