[FM] Fix de incidencias en el Navbar y Detalle de Catalogo
Incidencias:
INC029	Opcion Hogar en el menú desplegable no posee icono
INC030	Menú desplegable debe ser más ancho.
INC033	Al seleccionar la opción de postpago en el menú la experiencia es totalmente diferente.
INC037	Al seleccionar un producto, la opción desplegable luego del navbar texto ""Los más pedidos"" debe ser más grande. En la misma sección los titulos de cada producto no deben tener negrita.
INC038	Las tarjetas de Arma tu Postpago deben ser más anchas.
INC039	Texto antes de Al contado (Ej. S/ 4689) deber ser más grande y en negrita.
INC041	Todas las tarjetas despues de los detalles del equipo deben tener el mismo tamaño.
INC042	No funciona opción de consideración al final de la pagina.
INC053	Al seleccionar un producto, la opción desplegable luego del navbar no es responsive. Sombra al final de esa sección es distinta.
INC055	Debe tener menos espacio el texto en la tarjeta de especificaciones del producto; despues del titulo del equipo

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,14 +12,14 @@
       <div class="menu-mobile-content_opts">
         <ul class="menu-mobile-content_opts-item">
           <li>
-            <a href="/">
+            <a routerLink="/">
               <i class="fa fa-home"></i>
               <span>Inicio</span>
             </a>
           </li>
           <ng-container *ngFor="let item of menuList">
             <li>
-              <a href="/">
+              <a (click)="redirectTo(item.itemUrl)">
                 <i class="{{ item.itemFA }}"></i>
                 <span>{{ item.itemLabel }}</span>
               </a>
@@ -39,7 +39,7 @@
       <ul>
         <ng-container *ngFor="let item of menuList">
           <li>
-            <a (click)="redirectTo(item.itemUrl)">{{ item.itemLabel }}</a>
+            <a (click)="redirectToUrl(item.itemUrl)">{{ item.itemLabel }}</a>
           </li>
         </ng-container>
       </ul>
@@ -49,7 +49,9 @@
     <div class="menu-opts-item" (click)="toggleInputSearch()">
       <i class="fa fa-search"> </i>
     </div>
-    <div class="menu-opts-item_show" *ngIf="showContactNumber"><strong>Pedidos</strong><br />0800 00 334</div>
+    <div class="menu-opts-item_show" *ngIf="showContactNumber">
+      <div class="menu-opts-item_show-slide"><strong>Pedidos</strong><br />0800 00 334</div>
+    </div>
     <div class="menu-opts-item" (click)="toggleContactNumber()">
       <i class="fa fa-phone"></i>
     </div>
