--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -291,7 +291,7 @@
 
   <!-- Footer para producto -->
   <div class="footer-product">
-    <div class="footer-product-content">
+    <div class="footer-product-content" (click)="redirectToUrl('https://tiendaclaro.pe/politicas-entrega-soporte/CLARO')">
       <span> Consideraciones </span>
       <i class="fas fa-chevron-right"> </i>
     </div>
