--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -42,7 +42,7 @@ header {
       top: 0;
       height: 100vh;
       background-color: #b71f2d;
-      width: 240px;
+      width: 270px;
       padding: 0 16px;
       z-index: 10;
 
@@ -195,14 +195,29 @@ header {
   }
 
   .menu-opts-item_show {
+    position: relative;
+    overflow: hidden;
     width: 130px;
     height: 38px;
     color: #222222;
     font-size: 16px;
 
-    strong {
-      color: #222222;
+    .menu-opts-item_show-slide {
+      position: absolute;
+      //top: 35px;
+      top: 0;
+      right: 0;
+      transition: 1s;
+
+      strong {
+        color: #222222;
+      }
     }
+
+    //&: .menu-opts-item_show-slide {
+    //  transition: 1s;
+    //  top: 0;
+    //}
   }
 }
 
