[FM] Integración de ajustes en Registro de Pedidos
Implementación por Julio Gonzalez

--- a/src/app/layout/registro/header-registro/header-registro.component.html
+++ b/src/app/layout/registro/header-registro/header-registro.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="opciones_header">
-      <div class="opcion_verde"><i class="fas fa-lock"></i> Formulario seguro</div>
+      <div class="opcion_verde"><i class="fas fa-lock"></i> <span>Formulario seguro</span></div>
     </div>
   </section>
 
