--- a/src/app/layout/registro/header-registro/header-registro.component.scss
+++ b/src/app/layout/registro/header-registro/header-registro.component.scss
@@ -34,6 +34,13 @@
   font-size: 14px;
 }
 
+.header .opciones_header .opcion_verde span {
+  color: #70c473;
+  font-weight: 400;
+  margin-left: 5px;
+  font-size: 13px;
+}
+
 .header i.opcion_verde {
   color: #70c473;
   font-size: 14px;
