--- a/src/app/pages/registro/registro-detalle/registro-detalle.component.html
+++ b/src/app/pages/registro/registro-detalle/registro-detalle.component.html
@@ -27,13 +27,12 @@
             </select>
           </div>
         </div>
-        <!-- <div class="col-3"></div> -->
       </div>
 
       <div class="row">
         <div class="col-sm-12">
           <div class="form-group">
-            <label for="provincia">Provincias</label>
+            <label for="provincia">Provincia</label>
             <select
               id="provincia"
               name="form_provincia"
@@ -66,7 +65,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row div_custom">
         <div class="col-sm-12">
           <h2><i class="fas fa-truck"></i> ELIGE EL TIPO DE DESPACHO</h2>
         </div>
@@ -80,25 +79,11 @@
               <input type="checkbox" id="del2" name="tipo_despacho" />
               <span class="checkmark"></span>
             </label>
-
-            <!--
-            <ul class="menu_categorias margincero">
-              <input type="radio" id="del2" name="tipo_despacho" value="48 Horas" data-valor="0" class="form-control radio_custom"/>
-              <li class="li-con-border">
-                <label for="del2">
-                  Delivery Regular
-                  <span>
-                    Te llamamos y programamos la fecha y hora de entrega.
-                  </span>
-                </label>
-              </li>
-            </ul>
-            -->
           </div>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row div_custom">
         <div class="col-sm-12">
           <h2><i class="fas fa-headset"></i> COORDINAMOS LA ENTREGA</h2>
         </div>
@@ -142,7 +127,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row div_custom">
         <div class="col-sm-12">
           <h2><i class="fas fa-portrait"></i> PARA REGISTRAR LA VENTA</h2>
         </div>
@@ -181,7 +166,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row div_custom">
         <div class="col-sm-12">
           <h2><i class="far fa-credit-card"></i> PAGO CONTRA ENTREGA CON TARJETA</h2>
         </div>
@@ -195,28 +180,6 @@
               <input type="checkbox" id="tarj" name="tarj" />
               <span class="checkmark"></span>
             </label>
-
-            <!--
-            <ul class="menu_categorias margincero">
-              <input
-                id="tarj"
-                name="tarj"
-                required=""
-                style="opacity: 0; width: 0; float: left; height: 0px;"
-                type="text"
-                value=""
-                class="form-control input_custom"
-              />
-              <li class="li-con-border">
-                <label for="del2">
-                  Pago Contra entrega <br/>
-                  <span>
-                    Paga en casa con tu tarjeta de crédito y débito.
-                  </span>
-                </label>
-              </li>
-            </ul>
-            -->
           </div>
         </div>
       </div>
