--- a/src/app/pages/chips-claro/chips-claro.component.html
+++ b/src/app/pages/chips-claro/chips-claro.component.html
@@ -4,7 +4,7 @@
   <!-- Main -->
   <main>
     <!-- Header Catalog -->
-    <section class="catalog-title">
+    <section class="titulo_categoria">
       <h1>Todos</h1>
       <h6>En Tienda Claro encuentras el producto que se ajuste a ti, elige el tuyo y ¡Cómpralo Ahora!</h6>
     </section>
